# NetWire

./: .gitignore  CMakeLists.txt  CMakeLists_backup.txt  CMakeLists_minimal.txt  DEVELOPMENT_PLAN.md  IP2LOCATION_README.md  build.md  build_app.bat  copy_dlls.bat  deploy.bat  deploy_app.bat  resources.qrc  run_app.bat  run_as_admin.bat  test_ip2location.bat  test_ip2location.cpp  test_ip2location_CMakeLists.txt  test_ip2location_simple.bat  test_logger.cpp  test_logger_CMakeLists.txt  test_simple.cpp  test_simple_logger_CMakeLists.txt
build_minimal/: minimal.qrc.depends
deploy/NetWire/: README.txt
resources/: style.qss
scripts/: convert_icons.bat  convert_icons.py
src/: alertmanager.cpp  alertmanager.h  alertsdialog.cpp  alertsdialog.h  alertsdialog.ui  alertsettingsdialog.cpp  alertsettingsdialog.h  alertsettingsdialog.ui  connectiondetailsdialog.cpp  connectiondetailsdialog.h  connectiondetailsdialog.ui  debug_utils.h  firewallmanager.cpp  firewallmanager.h  firewallrulesdialog.cpp  firewallrulesdialog.h  firewallrulesdialog.ui  globallogger.cpp  globallogger.h  intrusiondetectionmanager.cpp  intrusiondetectionmanager.h  ip2location.cpp  ip2location.h  iplookup.cpp  iplookup.h  main.cpp  main_minimal.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_minimal.cpp  networkmonitor.cpp  networkmonitor.h
src/charts/: animatedchartview.h  applicationpiechart.cpp  applicationpiechart.h  bandwidthchart.cpp  bandwidthchart.h  connectionchart.cpp  connectionchart.h  connectiontimelinechart.cpp  connectiontimelinechart.h  networkheatmap.cpp  networkheatmap.h
src/dashboard/: dashboardwidget.cpp  dashboardwidget.h  networkcharts.cpp  networkcharts.h
src/utils/: animations.cpp  animations.h
test_ip2location_simple_build/: CMakeLists.txt
test_simple_build/: test_simple_logger.cpp
test_simple_logger_build/: CMakeLists.txt  test_logger_simple.cpp
tests/: CMakeLists.txt
tests/charts/: test_bandwidthchart.cpp
